landing page styling

--- a/v1/views/landing.ejs
+++ b/v1/views/landing.ejs
@@ -1,1 +1,10 @@
-<h1>landing page coming soon...</h1>
+<%- include("partials/header") %>
+<div class="container container-fluid">
+
+  <h1>landing page coming soon...</h1>
+
+  <p>Welcome to GoGreen</p>
+
+</div>
+
+<%- include("partials/footer") %>
